// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on GifExpertApp should rended correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    onAddCategory={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`Tests on GifExpertApp should render a categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    onAddCategory={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
